--- a/variables/_selectors.scss
+++ b/variables/_selectors.scss
@@ -9,7 +9,7 @@ $title-bar-menu-position-horizontal: "#header .topmenu";
 $address-bar: "#main .toolbar-mainbar";
 $bookmark-bar: "#main .bookmark-bar";
 $panel: "#panels-container";
-$tab-bar: "#main > .inner > :has(#tabs-tabbar-container)"; // TODO: Change this to "#main .tabbar-wrapper" when Vivaldi 5.8 reaches stable.
+$tab-bar: "#main .tabbar-wrapper";
 $footer-has-status-bar: "footer:has(.toolbar-statusbar)"; // This cannot be nested within another :has()
 $webpage: "#webview-container";
 
@@ -20,6 +20,9 @@ $status-bar: "footer .toolbar-statusbar";
 $command-chain-toolbar-component: ".button-toolbar.toolbar-command";
 $toolbar-editor-modal: "#modal-bg.toolbar-editor";
 $flexible-space: ".toolbar-spacer-flexible";
+$address-field-text-input: "#urlFieldInput";
+$search-field-text-input: ".vivaldi-searchfield.searchfield-input";
 
 // Combined variables
 $editable-toolbars: "#{$address-bar}, #{$panel}, #{$status-bar}";
+$toolbar-component-text-inputs: "#{$address-field-text-input}, #{$search-field-text-input}";
